fix: security related error